[workspace]
resolver = "2"
members = ["node", "pallets/*", "primitives/*", "runtime/*"]

[workspace.package]
name = "regionx"
version = "0.1.0"
authors = ["Sergej Sakac", "Oliver Lim"]
description = "RegionX Coretime market Kusama runtime"
license = "GPLv3"
homepage = "https://regionx.tech/"
repository = "https://github.com/RegionX-Labs/RegionX-Node"
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0.214", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
clap = { version = "4.5.4" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
color-print = "0.3.6"
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
log = { version = "0.4.22", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
serde_json = { version = "1.0.132", default-features = false }

# wasm
frame-benchmarking = { version = "40.2.0", default-features = false }
frame-executive = { version = "40.0.1", default-features = false }
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
frame-system-benchmarking = { version = "40.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "36.0.0", default-features = false }
frame-try-runtime = { version = "0.46.0", default-features = false }
pallet-aura = { version = "39.0.0", default-features = false }
pallet-authorship = { version = "40.0.0", default-features = false }
pallet-balances = { version = "41.1.0", default-features = false }
pallet-broker = { version = "0.19.1", default-features = false }
pallet-collective = { version = "40.1.0", default-features = false }
pallet-conviction-voting = { version = "40.1.0", default-features = false }
pallet-session = { version = "40.0.1", default-features = false }
pallet-sudo = { version = "40.0.0", default-features = false }
pallet-timestamp = { version = "39.0.0", default-features = false }
pallet-transaction-payment = { version = "40.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "43.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0", default-features = false }
pallet-asset-rate = { version = "19.0.0", default-features = false }
pallet-asset-tx-payment = { version = "40.0.0", default-features = false }
pallet-referenda = { version = "40.1.0", default-features = false }
pallet-membership = { version = "40.0.0", default-features = false }
pallet-message-queue = { version = "43.1.0", default-features = false }
pallet-multisig = { version = "40.1.0", default-features = false }
pallet-proxy = { version = "40.1.0", default-features = false }
pallet-preimage = { version = "40.0.0", default-features = false }
pallet-scheduler = { version = "41.2.0", default-features = false }
pallet-treasury = { version = "39.0.0", default-features = false }
pallet-utility = { version = "40.0.0", default-features = false }
pallet-whitelist = { version = "39.0.0", default-features = false }
sp-api = { version = "36.0.1", default-features = false }
# sp-api-proc-macro = { version = "22.0.1", default-features = false }
sp-blockchain = { version = "39.0.0", default-features = false }
sp-block-builder = { version = "36.0.0", default-features = false }
sp-externalities = { version = "0.30.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }
sp-trie = { version = "39.1.0", default-features = false }
sp-consensus-aura = { version = "0.42.0", default-features = false }
sp-consensus-beefy = { version = "24.1.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-inherents = { version = "36.0.0", default-features = false }
sp-offchain = { version = "36.0.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-session = { version = "38.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "36.0.0", default-features = false }
sp-version = { version = "39.0.0", default-features = false }
sp-genesis-builder = { version = "0.17.0", default-features = false }
pallet-xcm = { version = "19.1.2", default-features = false }
polkadot-parachain-primitives = { version = "16.1.0", default-features = false }
polkadot-runtime-common = { version = "19.1.0", default-features = false }
xcm = { version = "16.2.0", default-features = false, package = "staging-xcm" }
xcm-builder = { version = "20.1.1", default-features = false, package = "staging-xcm-builder" }
xcm-executor = { version = "19.1.2", default-features = false, package = "staging-xcm-executor" }
cumulus-primitives-aura = { version = "0.17.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "21.0.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.20.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.20.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
cumulus-pallet-xcm = { version = "0.19.1", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.20.0", default-features = false }
cumulus-primitives-core = { version = "0.18.1", default-features = false }
cumulus-primitives-timestamp = { version = "0.19.0", default-features = false }
cumulus-primitives-utility = { version = "0.20.0", default-features = false }
pallet-collator-selection = { version = "21.0.0", default-features = false }
parachain-info = { version = "0.20.0", default-features = false, package = "staging-parachain-info" }
parachains-common = { version = "21.0.0", default-features = false }
sp-timestamp = { version = "36.0.0", default-features = false }
sp-keystore = { version = "0.42.0", default-features = false }
sp-mmr-primitives = { version = "36.1.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
pallet-beefy-mmr = { version = "41.0.0", default-features = false }

# client
frame-benchmarking-cli = "47.2.0"
sc-basic-authorship = "0.49.0"
sc-chain-spec = "42.0.0"
sc-cli = "0.51.0"
sc-client-api = "39.0.0"
sc-consensus = "0.48.0"
sc-executor = "0.42.0"
sc-network = "0.49.1"
sc-network-sync = "0.48.0"
sc-network-common = "0.48.0"
sc-rpc = "44.0.0"
sc-service = "0.50.0"
sc-sysinfo = "42.0.0"
sc-telemetry = "28.1.0"
sc-tracing = "39.0.0"
sc-transaction-pool = "39.0.0"
sc-transaction-pool-api = "39.0.0"
sc-offchain = "44.0.0"
substrate-frame-rpc-system = "43.0.0"
substrate-prometheus-endpoint = "0.17.2"
try-runtime-cli = "0.42.0"
polkadot-cli = "23.0.0"
polkadot-primitives = "18.1.0"
polkadot-service = "23.0.0"
cumulus-client-cli = "0.22.0"
cumulus-client-consensus-aura = "0.22.0"
cumulus-client-consensus-common = "0.22.0"
cumulus-client-network = "0.22.0"
cumulus-client-service = "0.23.0"
cumulus-client-parachain-inherent = "0.16.0"
cumulus-primitives-parachain-inherent = "0.18.1"
cumulus-relay-chain-interface = "0.22.0"
cumulus-client-consensus-proposer = "0.19.0"
cumulus-client-collator = "0.22.0"
substrate-wasm-builder = { version = "26.0.1" }
substrate-build-script-utils = "11.0.0"

# Orml
orml-asset-registry = { version = "1.4.0", default-features = false }
orml-currencies = { version = "1.4.0", default-features = false }
orml-tokens = { version = "1.4.0", default-features = false }
orml-traits = { version = "1.4.0", default-features = false }
orml-unknown-tokens = { version = "1.4.0", default-features = false }
orml-xcm-support = { version = "1.4.0", default-features = false }

# Polytope Labs
ismp = { version = "1.1.0", default-features = false }
pallet-ismp = { version = "2503.0.0", default-features = false }
pallet-ismp-rpc = { version = "2503.0.0", default-features = false }
ismp-parachain = { version = "2503.0.0", default-features = false }
ismp-parachain-inherent = { version = "2503.0.0", default-features = false }
pallet-ismp-runtime-api = { version = "2503.0.0", default-features = false }
ismp-parachain-runtime-api = { version = "2503.0.0", default-features = false }
ismp-testsuite = { git = "https://github.com/polytope-labs/hyperbridge.git", branch = "main", default-features = false }

# Local
region-primitives = { path = "./primitives/region", default-features = false }
nonfungible-primitives = { path = "./primitives/nonfungible", default-features = false }
order-primitives = { path = "./primitives/order", default-features = false }
regionx-runtime-common = { path = "./runtime/common", default-features = false }
cocos-runtime = { path = "./runtime/cocos", default-features = false }
regionx-paseo-runtime = { path = "./runtime/paseo", default-features = false }
regionx-kusama-runtime = { path = "./runtime/kusama", default-features = false }
pallet-market = { path = "./pallets/market", default-features = false }
pallet-orders = { path = "./pallets/orders", default-features = false }
pallet-processor = { path = "./pallets/processor", default-features = false }
pallet-regions = { path = "./pallets/regions", default-features = false }
