[workspace]
resolver = "2"
members = ["pallets/*", "runtime/*", "primitives/*", "node"]

[workspace.package]
name = "regionx"
version = "0.1.0"
authors = ["Sergej Sakac", "Oliver Lim"]
description = "RegionX Coretime market Kusama runtime"
license = "GPLv3"
homepage = "https://regionx.tech/"
repository = "https://github.com/RegionX-Labs/RegionX-Node"
edition = "2021"

[workspace.dependencies]
polkadot-sdk = { version = "0.12.2", default-features = false }

# crates that can't be used in polkadot-sdk
sp-core = { version = "35.0.0", default-features = false }
frame-benchmarking = { version = "39.0.0", default-features = false }
sp-io = { version = "39.0.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.18.1", default-features = false }
substrate-wasm-builder = "25.0.0"
sc-service = "0.49.0"
sc-tracing = "38.0.0"
sp-api-proc-macro = "21.0.0"

anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0.214", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
clap = { version = "4.5.4" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
color-print = "0.3.6"
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
log = { version = "0.4.22", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
serde_json = { version = "1.0.132", default-features = false }

# Polytope Labs
ismp = { git = "https://github.com/polytope-labs/hyperbridge.git", tag = "hyperbridge-v1.3.0", default-features = false }
pallet-ismp = { git = "https://github.com/polytope-labs/hyperbridge.git", tag = "hyperbridge-v1.3.0", default-features = false }
pallet-ismp-rpc = { git = "https://github.com/polytope-labs/hyperbridge.git", tag = "hyperbridge-v1.3.0", default-features = false }
ismp-parachain = { git = "https://github.com/polytope-labs/hyperbridge.git", tag = "hyperbridge-v1.3.0", default-features = false }
ismp-parachain-inherent = { git = "https://github.com/polytope-labs/hyperbridge.git", tag = "hyperbridge-v1.3.0", default-features = false }
pallet-ismp-runtime-api = { git = "https://github.com/polytope-labs/hyperbridge.git", tag = "hyperbridge-v1.3.0", default-features = false }
ismp-parachain-runtime-api = { git = "https://github.com/polytope-labs/hyperbridge.git", tag = "hyperbridge-v1.3.0", default-features = false }
pallet-mmr-tree = { git = "https://github.com/polytope-labs/hyperbridge.git", tag = "hyperbridge-v1.3.0", default-features = false }
pallet-mmr-runtime-api = { git = "https://github.com/polytope-labs/hyperbridge.git", tag = "hyperbridge-v1.3.0", default-features = false }
ismp-testsuite = { git = "https://github.com/polytope-labs/hyperbridge.git", tag = "hyperbridge-v1.3.0", default-features = false }

# Local
region-primitives = { path = "./primitives/region", default-features = false }
nonfungible-primitives = { path = "./primitives/nonfungible", default-features = false }
order-primitives = { path = "./primitives/order", default-features = false }
regionx-runtime-common = { path = "./runtime/common", default-features = false }
regionx-kusama-runtime = { path = "./runtime/kusama" }
pallet-market = { path = "./pallets/market", default-features = false }
pallet-orders = { path = "./pallets/orders", default-features = false }
pallet-processor = { path = "./pallets/processor", default-features = false }
pallet-regions = { path = "./pallets/regions", default-features = false }
