[package]
name = "regionx-node"
version = "0.1.0"
description.workspace = true
build = "build.rs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.dist]
dist = true

[dependencies]
clap = { workspace = true, features = ["derive"]}
log = { workspace = true }
codec = { workspace = true }
serde = { workspace = true, features = ["derive"]}
jsonrpsee = { workspace = true, features = ["server"]  }
futures = { workspace = true }
serde_json = { workspace = true }

# Local
regionx-kusama-runtime = { workspace = true }
regionx-runtime-common = { workspace = true }

# Polytope Labs
pallet-ismp-runtime-api = { workspace = true, default-features = true }
pallet-ismp-rpc = { workspace = true, default-features = true }
ismp-parachain-inherent = { workspace = true, default-features = true }
ismp-parachain-runtime-api = { workspace = true, default-features = true }
pallet-mmr-runtime-api = { workspace = true, default-features = true }

[dependencies.polkadot-sdk]
workspace = true
default-features = true
features = [
    "frame-system",
    "frame-benchmarking",
    "frame-benchmarking-cli",
    "pallet-transaction-payment-rpc",
    "sc-basic-authorship",
    "sc-chain-spec",
    "sc-cli",
    "sc-client-api",
    "sc-consensus",
    "sc-executor",
    "sc-network",
    "sc-network-sync",
    "sc-network-common",
    "sc-rpc",
    "sc-service",
    "sc-sysinfo",
    "sc-telemetry",
    "sc-transaction-pool",
    "sc-transaction-pool-api",
    "sp-api",
    "sp-block-builder",
    "sp-blockchain",
    "sp-consensus-aura",
    "sp-core",
    "sp-keystore",
    "sp-offchain",
    "sc-offchain",
    "sp-io",
    "sp-runtime",
    "sp-session",
    "sp-timestamp",
    "sp-transaction-pool",
    "substrate-frame-rpc-system",
    "substrate-prometheus-endpoint",
    "sp-mmr-primitives",
    "frame-metadata-hash-extension",
    "polkadot-cli",
    "polkadot-primitives",
    "polkadot-service",
    "staging-xcm",
    "cumulus-client-cli",
    "cumulus-primitives-aura",
    "cumulus-client-consensus-aura",
    "cumulus-client-consensus-common",
    "cumulus-client-network",
    "cumulus-client-service",
    "cumulus-primitives-core",
    "cumulus-primitives-parachain-inherent",
    "cumulus-relay-chain-interface",
    "cumulus-client-consensus-proposer",
    "cumulus-client-collator",
    "pallet-transaction-payment",
]

[build-dependencies]
polkadot-sdk = { workspace = true, default-features = true, features = [
    "substrate-build-script-utils",
] }

[features]
default = []
runtime-benchmarks = [
	"regionx-kusama-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"regionx-kusama-runtime/try-runtime"
]
