[package]
name = "pallet-market"
authors = ["Anonymous"]
description = "Pallet containing the Coretime marketplace logic"
version = "0.1.0"
license = "GPLv3"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = { workspace = true, default-features = false }
log = { workspace = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = {  workspace = true,  default-features = false, features = ["derive"] }

# Local
nonfungible-primitives = { workspace = true, default-features = false }
region-primitives = { workspace = true, default-features = false }

[dependencies.polkadot-sdk]
workspace = true
features = [
    "frame-support",
    "frame-system",
    "sp-runtime",
    "sp-io",
    "sp-core",
    "pallet-broker",
]

[dev-dependencies]
serde = { workspace = true }
pallet-regions = { workspace = true, default-features = false }
polkadot-sdk = { workspace = true, features = [
    "pallet-balances",
], default-features = true }
ismp = { workspace = true, default-features = false }
ismp-testsuite = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["polkadot-sdk/frame-benchmarking", "polkadot-sdk/runtime-benchmarks"]
std = [
	"log/std",
	"codec/std",
	"nonfungible-primitives/std",
	"region-primitives/std",
	"scale-info/std",
	"pallet-regions/std",
	"ismp/std",
	"polkadot-sdk/std",
]
try-runtime = [ "polkadot-sdk/try-runtime" ]
