[package]
name = "pallet-orders"
authors = ["Anonymous"]
description = "Pallet for handling order creation and crowdfunding"
version = "0.1.0"
license = "GPLv3"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = {  workspace = true,  default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = {  workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
pallet-broker = { workspace = true, default-features = false }
xcm = { workspace = true, default-features = false }
xcm-executor = { workspace = true, default-features = false }

# Local
parachain-primitives = { workspace = true, default-features = false }

[dev-dependencies]
serde = { workspace = true }
pallet-balances = { workspace = true, default-features = false }
xcm-builder = { workspace = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"log/std",
	"codec/std",
	"scale-info/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
    "parachain-primitives/std",
	"pallet-broker/std",
	"pallet-balances/std",
    "xcm/std",
    "xcm-executor/std",
    "xcm-builder/std",
]
try-runtime = [ "frame-support/try-runtime" ]
