[package]
name = "pallet-orders"
authors = ["Anonymous"]
description = "Pallet for handling order creation and crowdfunding"
version = "0.1.0"
license = "GPLv3"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = { workspace = true, default-features = false }
log = { workspace = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

# Local
order-primitives = { workspace = true, default-features = false }

[dependencies.polkadot-sdk]
workspace = true
features = [
    "frame-support",
    "frame-system",
    "pallet-broker",
    "sp-io",
    "sp-core",
    "sp-runtime",
    "cumulus-primitives-core",
]

[dev-dependencies]
serde = { workspace = true }
polkadot-sdk = { workspace = true, features = [
    "pallet-balances",
], default-features = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"polkadot-sdk/frame-benchmarking", "polkadot-sdk/runtime-benchmarks"
]
std = [
	"log/std",
	"codec/std",
	"scale-info/std",
	"order-primitives/std",
	"polkadot-sdk/std",
]
try-runtime = ["polkadot-sdk/try-runtime"]
