[package]
name = "pallet-processor"
authors = ["Anonymous"]
description = "Pallet for processing coretime orders"
version = "0.1.0"
license = "GPLv3"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = { workspace = true, default-features = false }
log = { workspace = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

# Local
nonfungible-primitives = { workspace = true, default-features = false }
order-primitives = { workspace = true, default-features = false }
region-primitives = { workspace = true, default-features = false }

[dependencies.polkadot-sdk]
workspace = true
features = [
    "frame-support",
    "frame-system",
    "sp-runtime",
    "sp-io",
    "sp-core",
    "pallet-broker",
    "pallet-xcm",
    "staging-xcm",
    "staging-xcm-builder",
    "staging-xcm-executor",
]

[dev-dependencies]
serde = { workspace = true }
smallvec = { workspace = true }
polkadot-sdk = { workspace = true, features = [
    "pallet-balances",
], default-features = true }

pallet-regions = { workspace = true, default-features = true }
pallet-orders = { workspace = true, default-features = true }

ismp = { workspace = true, default-features = true }
ismp-testsuite = { workspace = true, default-features = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"polkadot-sdk/frame-benchmarking", 
	"polkadot-sdk/runtime-benchmarks",
	# "polkadot-sdk/xcm-builder/runtime-benchmarks",
	# "polkadot-sdk/pallet-xcm/runtime-benchmarks",
]
std = [
	"log/std",
	"codec/std",
	"scale-info/std",
    "nonfungible-primitives/std",
    "order-primitives/std",
    "region-primitives/std",
	"ismp/std",
	"polkadot-sdk/std",
]
try-runtime = ["polkadot-sdk/try-runtime"]
