[package]
name = "pallet-regions"
authors = ["Anonymous"]
description = "Pallet responsible for handling Coretime regions"
version = "0.1.0"
license = "GPLv3"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = { workspace = true, default-features = false }
log = { workspace = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = {  workspace = true,  default-features = false, features = ["derive"] }

# Polytope labs
ismp = { workspace = true, default-features = false }
ismp-parachain = { workspace = true, default-features = false }
pallet-ismp = { workspace = true, default-features = false }

# Local
nonfungible-primitives = { workspace = true, default-features = false }
region-primitives = { workspace = true, default-features = false }

[dependencies.polkadot-sdk]
workspace = true
features = [
    "frame-support",
    "frame-system",
    "pallet-broker",
    "sp-io",
    "sp-core",
    "sp-runtime",
]

[dev-dependencies]
hex = "0.4.3"
serde = { workspace = true }
polkadot-sdk = { workspace = true, features = [
    "pallet-balances",
], default-features = true }
ismp-testsuite = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["polkadot-sdk/frame-benchmarking", "polkadot-sdk/runtime-benchmarks"]
std = [
	"log/std",
	"codec/std",
	"ismp/std",
	"ismp-parachain/std",
	"nonfungible-primitives/std",
	"region-primitives/std",
	"scale-info/std",
	"pallet-ismp/std",
	"polkadot-sdk/std",
]
try-runtime = [ "polkadot-sdk/try-runtime" ]
