[package]
name = "nonfungible-primitives"
authors = ["Anonymous"]
description = "Traits and types related to nonfungible assets"
version = "0.1.0"
license = "GPLv3"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

polkadot-sdk = { workspace = true, features = ["frame-support"] }

[features]
default = ["std"]
std = [
	"log/std",
	"codec/std",
	"scale-info/std",
    "polkadot-sdk/std",
]
