[package]
name = "region-primitives"
authors = ["Anonymous"]
description = "Traits and types related to regions"
version = "0.1.0"
license = "GPLv3"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-core = { workspace = true, default-features = false }

polkadot-sdk = { workspace = true, features = ["frame-support", "pallet-broker"] }

[features]
default = ["std"]
std = [
	"log/std",
	"codec/std",
	"scale-info/std",
    "sp-core/std",
    "polkadot-sdk/std",
]
