[package]
name = "regionx-runtime-common"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }

[dependencies.polkadot-sdk]
workspace = true
features = [
    "sp-consensus-aura",
    "sp-core",
    "sp-runtime",
]

[features]
default = ["std"]
std = [
	"codec/std",
    "scale-info/std",
    "polkadot-sdk/std",
]
